# SWIC_3

./: .gitignore  Cargo.toml  SWIC_3.tar.bz2  build.sh
src/: crypt.rs  lib.rs
web/: index.html  style.css
