[package]
name = "SWIC_3"
version = "0.1.0"
description = "Simple WASM Implementation of Cryptography (Blake3 / Threefish)"
authors = ["Michael Bednarek <mbednarek360@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "*"
gloo = "*"
zero85 = "*"
blake3 = "*"
threefish-cipher = "*"
block-cipher-trait = "*"
generic-array = "0.12.3"
console_error_panic_hook="*"

[dependencies.web-sys]
version = "*"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlTextAreaElement',
  'Node',
  'Window'
]

[[bin]]
name = "WASM"
path = "main.rs"